Refactor `openKarte` logic and improve readability
- Streamlined `openKarte` implementation by removing redundant state checks
- Replaced `Thread` instantiation with `Thread.ofVirtual()` for modern threading practices
- Simplified health insurance fetching logic for better clarity and maintainability